<resources>
    <string name="app_name">Test</string>
    <string name="nerwork_error_retry">网络异常,请重试!</string>
    <string name="phone_str_null">电话号码不能为空</string>
    <string name="login_string_login_now">立即登录</string>
    <string name="login_strings_please_input_name">请输入用户名</string>
    <string name="login_strings_please_input_pw">请输入密码</string>
    <string name="data_uoload_success_no_again">数据已经提交成功,请勿多次提交!</string>
    <string name="http_timeout">网络连接超时,请重试</string>
    <string name="http_500">服务器错误,请稍后再试</string>
    <string name="http_unknow_host">网络连接异常,请检查您的网络</string>
    <string name="login_strings_login_success">登录成功</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="order_number_tv">订单号:</string>
    <string name="myorder_tv">我的订单</string>
    <string name="refresh_success">刷新成功</string>
    <string name="house_type1_room">房间</string>
    <string name="house_type2_hall">客厅</string>
    <string name="house_type3_kitchen">厨房</string>
    <string name="house_type4_toilet">卫生间</string>
    <string name="house_type5_balcony">阳台</string>
    <string name="tip_dialog_strings_yes">确定</string>
    <string name="tip_dialog_strings_no">返回</string>
    <string name="choice_strings_bt_text">确定</string>
    <string name="tip_more_function_strings_title">更多操作</string>
    <string name="tip_more_function_strings_del">删除</string>
    <string name="tip_more_function_strings_cancel">取消</string>
    <string name="store_tv">门店</string>
    <string name="strings_please_choose">请选择</string>
    <string name="please_input_name_tv">请输入姓名</string>
    <string name="please_input_correct_phone_tv">请输入正确的电话号码</string>
    <string name="please_input_area_tv">请输入产证面积</string>
    <string name="please_choose_store_tv">请选择门店</string>
    <string name="please_choose_house_type_tv">请选择房型</string>
    <string name="please_choose_type_tv">请选择风格</string>
    <string name="please_choose_zone_tv">请选择区域</string>
    <string name="please_input_adress_tv">请输入地址</string>
    <string name="please_input_referralname_tv">请输入推荐人姓名</string>
    <string name="please_input_referralphone_tv">请输入正确的推荐人电话</string>
    <string name="add_order_success">订单添加成功</string>
    <string name="ensure_add_order">确认新增订单?</string>
    <string name="order_save_tv">保存</string>
    <string name="add_order_name_tv">姓名(必填)</string>
    <string name="add_order_name_hint">请填写姓名</string>
    <string name="add_order_phone_tv">电话(必填)</string>
    <string name="add_order_phone_hint">请输入电话</string>
    <string name="house_area_tv">产证面积(平米)</string>
    <string name="add_order_area_edit">请输入面积</string>
    <string name="add_order_adress_tv">地址</string>
    <string name="add_order_adress_hint">请输入地址</string>
    <string name="add_order_demand_tv">特殊要求</string>
    <string name="add_order_demand_hint">请填写特殊要求</string>
    <string name="choose_house_type">选择房型</string>
    <string name="style_str">风格</string>
    <string name="receipt_tv">收款</string>
    <string name="recepit_remark_tv">备注(选填)</string>
    <string name="remark_hint">请输入备注内容</string>
    <string name="is_referral_tv">是否有推荐人</string>
    <string name="referral_name_tv">推荐人姓名</string>
    <string name="referral_phone_tv">推荐人电话(必填)</string>
    <string name="input_search_name_tv">请输入姓名</string>
    <string name="input_search_phone_tv">请输入电话号码</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="chouse_area">选择区域</string>
    <string name="design_agreement_strings_locate_area">区域</string>
    <string name="evaluate_strings_style_title">风格</string>
    <string name="design_agreement_strings_house_type">房型</string>
    <string name="order_title_tv">新增订单</string>
    <string name="order_special_tv">特殊要求</string>
    <string name="revation_order_tv">订单详情</string>
</resources>
