<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="54dp"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="33dp">

            <EditText
                android:id="@+id/login_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/img_clean_login"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_strings_please_input_name"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_clean_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/icon_login_clear_text"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_name_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:drawableBottom="@drawable/login_et_text_shape" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="33dp">

            <EditText
                android:id="@+id/login_pw"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:layout_toLeftOf="@+id/img_pw_visible"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_strings_please_input_pw"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_pw_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/icon_login_pw_invisible"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_pw_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:drawableBottom="@drawable/login_et_text_shape" />
    </LinearLayout>

    <com.li.test.view.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="btnLogin"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/login_string_login_now"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.li.test.view.RippleView>
</LinearLayout>
